fix: code and table style on safari

--- a/themes/ack/source/css/_partial/_post/_code.scss
+++ b/themes/ack/source/css/_partial/_post/_code.scss
@@ -27,7 +27,7 @@ $language-map: (
     cs: "C#",
     ini: "INI",
     makefile: "Makefile",
-    markdown: "Markdown"
+    markdown: "Markdown",
 ) !default;
 
 code,
@@ -82,12 +82,19 @@ code {
     td.code {
         background-color: rgba($theme-color, 0.05);
         border: none;
+        padding-right: 0.5rem;
 
         pre {
             padding-left: 0.5rem;
             padding-bottom: 0.5rem;
             overflow-x: auto;
             display: block;
+        }
+
+        .line {
+            //https://stackoverflow.com/questions/44754987/getting-osx-safari-to-honor-css-white-space-pre
+            white-space: pre;
+            word-wrap: normal;
         }
 
         .marked {
@@ -102,7 +109,7 @@ code {
         color: $color-gray;
         text-align: right;
         font-size: 0.75em;
-        padding: 0.25rem 0.5rem 0;
+        padding: 0.125rem 0.5rem 0;
         line-height: 1rem;
         height: 1rem;
         font-weight: 600;
