--- a/themes/ack/source/css/_partial/_post/_content.scss
+++ b/themes/ack/source/css/_partial/_post/_content.scss
@@ -96,6 +96,7 @@
         max-width: 100%;
         border-spacing: 0;
         border-collapse: collapse;
+        table-layout: fixed;
 
         thead {
             background: $theme-deputy-color;
